--- a/djBackend/requirements.txt
+++ b/djBackend/requirements.txt
@@ -1,281 +1,9 @@
-absl-py==0.9.0
-aiohttp==3.6.2
-alabaster==0.7.12
-anaconda-client==1.7.2
-anaconda-project==0.8.3
-appnope==0.1.0
-appscript @ file:///opt/concourse/worker/volumes/live/aa928f42-721f-468a-5637-76f7349085f8/volume/appscript_1594840167539/work
-argon2-cffi @ file:///opt/concourse/worker/volumes/live/c4db8eed-7de0-4d68-400c-2ea7e21d3750/volume/argon2-cffi_1596828478065/work
-asgiref==3.2.3
-asn1crypto @ file:///tmp/build/80754af9/asn1crypto_1596577642040/work
-astor==0.8.0
-astroid @ file:///opt/concourse/worker/volumes/live/b22b518b-f584-4586-5ee9-55bfa4fca96e/volume/astroid_1592495912194/work
-astropy==4.0.2
-astunparse==1.6.3
-async-generator==1.10
-async-timeout==3.0.1
-atomicwrites==1.4.0
-attrs @ file:///tmp/build/80754af9/attrs_1600298409949/work
-Babel==2.8.0
-backcall==0.2.0
-backports.functools-lru-cache==1.6.1
-backports.os==0.1.1
-backports.shutil-get-terminal-size==1.0.0
-backports.tempfile==1.0
-backports.weakref==1.0.post1
-beautifulsoup4 @ file:///tmp/build/80754af9/beautifulsoup4_1601924105527/work
-bitarray @ file:///opt/concourse/worker/volumes/live/8c69a34e-9d3a-416b-5457-ed46e290bf2d/volume/bitarray_1603210384937/work
-bkcharts==0.2
-bleach @ file:///tmp/build/80754af9/bleach_1600439572647/work
-bokeh @ file:///opt/concourse/worker/volumes/live/17495d14-5b57-4c12-6d6b-201edb177b9e/volume/bokeh_1603297848703/work
-boto==2.49.0
-Bottleneck==1.3.2
-brotlipy==0.7.0
-cachetools==4.1.1
-certifi==2020.4.5.2
-cffconvert==1.3.3
-cffi @ file:///opt/concourse/worker/volumes/live/74b22aae-8eb9-44eb-6c00-a8a07af62b36/volume/cffi_1600699174113/work
-chardet==3.0.4
-click==6.7
-cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1598884132938/work
-clyent==1.2.2
-colorama @ file:///tmp/build/80754af9/colorama_1603211150991/work
-comet-ml==3.2.3
-conda==4.9.0
-conda-build==3.20.4
-conda-package-handling @ file:///opt/concourse/worker/volumes/live/41a2ba95-d84c-4c06-4d6e-5665866bc5b4/volume/conda-package-handling_1603018173200/work
-conda-verify==3.4.2
-configobj==5.0.6
-contextlib2==0.6.0.post1
-cryptography @ file:///opt/concourse/worker/volumes/live/449c9d42-da39-4138-6bf0-843317a1ad24/volume/cryptography_1601046862310/work
-cycler==0.10.0
-Cython @ file:///opt/concourse/worker/volumes/live/a8b919bf-06b6-4be5-60d8-71d16518c421/volume/cython_1594833990717/work
-cytoolz==0.11.0
-dask @ file:///tmp/build/80754af9/dask-core_1602083700509/work
-decorator==4.4.2
-defusedxml==0.6.0
-distributed @ file:///opt/concourse/worker/volumes/live/0d5d9988-b71c-4572-5e17-66ee930ed926/volume/distributed_1602083912954/work
-Django==3.0.3
-docopt==0.6.2
-docutils==0.16
-dulwich==0.20.6
-entrypoints==0.3
-enum34==1.1.10
-et-xmlfile==1.0.1
-everett==1.0.2
-fastcache==1.1.0
-filelock==3.0.12
-Flask==1.1.2
-fsspec @ file:///tmp/build/80754af9/fsspec_1602684995936/work
-future==0.18.2
-gast==0.3.3
-gevent @ file:///opt/concourse/worker/volumes/live/c34232a8-ecb9-48a8-6207-676157270592/volume/gevent_1601397555289/work
-glob2==0.7
-gmpy2==2.0.8
-google-auth==1.22.0
-google-auth-oauthlib==0.4.1
-google-pasta==0.2.0
-greenlet @ file:///opt/concourse/worker/volumes/live/0051114e-81b1-4a15-4054-b5a71cd53179/volume/greenlet_1600874059672/work
-grpcio==1.32.0
-h5py==2.10.0
-HeapDict==1.0.1
-html5lib @ file:///tmp/build/80754af9/html5lib_1593446221756/work
-hypothesis @ file:///tmp/build/80754af9/hypothesis_1603214073689/work
-idna @ file:///tmp/build/80754af9/idna_1593446292537/work
-imageio @ file:///tmp/build/80754af9/imageio_1594161405741/work
-imagesize==1.2.0
-importlib-metadata @ file:///tmp/build/80754af9/importlib-metadata_1602276842396/work
-iniconfig @ file:///tmp/build/80754af9/iniconfig_1602780191262/work
-ipdb==0.13.4
-ipykernel @ file:///opt/concourse/worker/volumes/live/73e8766c-12c3-4f76-62a6-3dea9a7da5b7/volume/ipykernel_1596206701501/work/dist/ipykernel-5.3.4-py3-none-any.whl
-ipython @ file:///opt/concourse/worker/volumes/live/bb221eaa-cc1a-4ab2-40f7-74a2020a44b1/volume/ipython_1599056234390/work
-ipython-genutils==0.2.0
-ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1601490159889/work
-isort @ file:///tmp/build/80754af9/isort_1602603989581/work
-itsdangerous==1.1.0
-jdcal==1.4.1
-jedi @ file:///opt/concourse/worker/volumes/live/152cd167-7b79-4fbd-5c97-d7b338805c2b/volume/jedi_1598371617305/work
-Jinja2==2.11.2
-joblib==0.16.0
-json5==0.9.5
-jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
-jupyter==1.0.0
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1601311786391/work
-jupyter-console @ file:///tmp/build/80754af9/jupyter_console_1598884538475/work
-jupyter-core==4.6.3
-jupyterlab==2.2.6
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-jupyterlab-server @ file:///tmp/build/80754af9/jupyterlab_server_1594164409481/work
-Keras==2.2.4
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.2
-keyring @ file:///opt/concourse/worker/volumes/live/d6e8db52-c956-4881-5ae4-9b34116afa50/volume/keyring_1601490894641/work
-kiwisolver==1.2.0
-lazy-object-proxy==1.4.3
-libarchive-c==2.9
-llvmlite==0.34.0
-locket==0.2.0
-lxml @ file:///opt/concourse/worker/volumes/live/801e2591-100d-416d-4361-e786aa5d305b/volume/lxml_1603216291539/work
-makecite==0.5
-Markdown==3.2.2
-MarkupSafe==1.1.1
-matplotlib @ file:///opt/concourse/worker/volumes/live/415740a8-e00a-411a-7129-aa05c3842a43/volume/matplotlib-base_1597876353062/work
-mccabe==0.6.1
-mistune==0.8.4
-mkl-fft==1.2.0
-mkl-random==1.1.1
-mkl-service==2.3.0
-mne==0.22.0
-mock==4.0.2
-more-itertools @ file:///tmp/build/80754af9/more-itertools_1598884071673/work
-mpmath==1.1.0
-msgpack==1.0.0
-multidict==4.7.6
-multipledispatch==0.6.0
-navigator-updater==0.2.1
-nbclient==0.5.0
-nbconvert==6.0.6
-nbformat==5.0.7
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1601499549014/work
-netifaces==0.10.9
-networkx @ file:///tmp/build/80754af9/networkx_1598376031484/work
-nltk @ file:///tmp/build/80754af9/nltk_1592496090529/work
-nose==1.3.7
-notebook @ file:///opt/concourse/worker/volumes/live/d2f310db-b6ef-49ca-4ff6-cbb3a628fe1d/volume/notebook_1601501569294/work
-numba @ file:///opt/concourse/worker/volumes/live/a92243fb-d564-44ee-7f97-342ce782c8cc/volume/numba_1600108029490/work
-numexpr==2.7.1
-numpy==1.19.2
-numpydoc==0.9.1
-nvidia-ml-py3==7.352.0
-oauthlib==3.1.0
-olefile==0.46
-openpyxl @ file:///tmp/build/80754af9/openpyxl_1598113097404/work
-opt-einsum==3.3.0
-packaging==20.4
-pandas==0.25.0
-pandocfilters==1.4.2
-parso==0.7.1
-partd==1.1.0
-path @ file:///opt/concourse/worker/volumes/live/3c4a9bd8-14f9-4312-71d6-ef230138ac01/volume/path_1598376562436/work
-pathlib2==2.3.5
-patsy==0.5.1
-pep8==1.7.1
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow @ file:///opt/concourse/worker/volumes/live/28f094e1-d4b0-436d-6751-607fa59ce512/volume/pillow_1602788716788/work
-pkginfo==1.6.0
-plaidbench==0.7.0
-plaidml==0.7.0
-plaidml-keras==0.7.0
-plotly==4.5.0
-pluggy==0.13.1
-ply==3.11
-prometheus-client==0.8.0
-prompt-toolkit==3.0.7
-protobuf==3.13.0
-psutil @ file:///opt/concourse/worker/volumes/live/abb7a219-3a4a-4ff9-4158-148060faae29/volume/psutil_1598370243710/work
-psycopg2==2.8.6
-ptyprocess==0.6.0
-py @ file:///tmp/build/80754af9/py_1593446248552/work
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle==2.6.0
-pycosat==0.6.3
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-pycrypto==2.6.1
-pycurl==7.43.0.6
-pyflakes==2.2.0
-Pygments @ file:///tmp/build/80754af9/pygments_1600458456400/work
-pykwalify==1.8.0
-pylint @ file:///opt/concourse/worker/volumes/live/9eebf2dc-3c74-4778-701c-c55b13929def/volume/pylint_1598624018844/work
-pyodbc===4.0.0-unsupported
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1594392929924/work
-pyparsing==2.4.7
-pyrsistent @ file:///opt/concourse/worker/volumes/live/656e0c1b-ef87-4251-4a51-1290b2351993/volume/pyrsistent_1600141745371/work
-PySocks==1.7.1
-pytest==0.0.0
-pytest-arraydiff==0.3
-pytest-astropy==0.8.0
-pytest-astropy-header==0.1.2
-pytest-doctestplus @ file:///tmp/build/80754af9/pytest-doctestplus_1598624048543/work
-pytest-openfiles==0.5.0
-pytest-remotedata==0.3.2
-python-dateutil==2.8.1
-pytz==2020.1
-PyWavelets @ file:///opt/concourse/worker/volumes/live/4c8a2af4-1e43-4df6-4c7a-c73342176802/volume/pywavelets_1601658329224/work
-PyYAML==5.3.1
-pyzmq==19.0.2
-QtAwesome @ file:///tmp/build/80754af9/qtawesome_1602272867890/work
-qtconsole @ file:///tmp/build/80754af9/qtconsole_1600870028330/work
-QtPy==1.9.0
-regex @ file:///opt/concourse/worker/volumes/live/3ea1565c-1e6c-4a53-5638-17c5cb7b9b68/volume/regex_1602786648534/work
-requests @ file:///tmp/build/80754af9/requests_1592841827918/work
-requests-oauthlib==1.3.0
-retrying==1.3.3
-rope @ file:///tmp/build/80754af9/rope_1602264064449/work
-rsa==4.6
-ruamel-yaml==0.15.87
-scikit-image==0.17.2
-scikit-learn @ file:///opt/concourse/worker/volumes/live/2dacdc11-21e7-44f5-57b4-6b8eb6ceb626/volume/scikit-learn_1598376924598/work
-scipy==1.4.1
-seaborn @ file:///tmp/build/80754af9/seaborn_1600553570093/work
-Send2Trash==1.5.0
-simplegeneric==0.8.1
-SimpleITK==1.2.0rc2.dev1167+gd4cf2
-singledispatch @ file:///tmp/build/80754af9/singledispatch_1602523705405/work
-six==1.15.0
-snowballstemmer==2.0.0
-sortedcollections==1.2.1
-sortedcontainers==2.2.2
-soupsieve==2.0.1
-Sphinx==2.1.2
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
-sphinxcontrib-websupport @ file:///tmp/build/80754af9/sphinxcontrib-websupport_1597081412696/work
-spyder==3.3.6
-spyder-kernels==0.5.2
-SQLAlchemy @ file:///opt/concourse/worker/volumes/live/c8ccb658-c55f-4a2e-6c0c-7f57021ac0b1/volume/sqlalchemy_1598374749865/work
-sqlparse==0.3.0
-statsmodels @ file:///opt/concourse/worker/volumes/live/41e6742d-2c06-48cc-4fc6-16d17fc6f640/volume/statsmodels_1602280228062/work
-sympy @ file:///opt/concourse/worker/volumes/live/8c30b858-9635-47c8-5d6a-05128c9304b2/volume/sympy_1598376345504/work
-tables==3.6.1
-tblib @ file:///tmp/build/80754af9/tblib_1597928476713/work
-tensorboard==2.2.2
-tensorboard-plugin-wit==1.7.0
-tensorflow==2.2.0
-tensorflow-estimator==2.2.0
-termcolor==1.1.0
-terminado==0.9.1
-testpath==0.4.4
-threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
-tifffile==2020.10.1
-toml @ file:///tmp/build/80754af9/toml_1592853716807/work
-toolz @ file:///tmp/build/80754af9/toolz_1601054250827/work
-tornado==6.0.4
-tqdm @ file:///tmp/build/80754af9/tqdm_1602185206534/work
-traitlets==5.0.4
-typed-ast==1.4.1
-typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1598376058250/work
-unicodecsv==0.14.1
-urllib3==1.25.10
-watermark==2.0.2
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
-webencodings==0.5.1
-websocket-client==0.57.0
-Werkzeug==1.0.1
-widgetsnbextension==3.5.1
-wrapt==1.12.1
-wurlitzer @ file:///opt/concourse/worker/volumes/live/59acb45c-07e7-4304-57af-e84f3889d3ef/volume/wurlitzer_1594753863419/work
-xlrd==1.2.0
-XlsxWriter @ file:///tmp/build/80754af9/xlsxwriter_1602692860603/work
-xlwings==0.20.8
-xlwt==1.3.0
-yarl==1.6.0
-zict==2.0.0
-zipp==3.2.0
-zope.event==4.5.0
-zope.interface @ file:///opt/concourse/worker/volumes/live/559dcb76-0142-4529-51ee-2731e3549665/volume/zope.interface_1602002423169/work
+asgiref
+certifi==2020.12.5
+Django
+django-filter==2.4.0
+djangorestframework==3.12.4
+Markdown==3.3.4
+psycopg2
+pytz
+sqlparse
